# CreGeoReference

./: README.md  pyproject.toml  test_local.sh  test_production.sh  test_test.sh
src/CreGeoReference/: GeoReference.py  __init__.py
tests/: test_countries.py
